--- a/package.json
+++ b/package.json
@@ -29,12 +29,18 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3",
-    "tsx": "^3.13.0",
     "typescript": "^5.2.2",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6"
   },
   "engines": {
     "node": ">=18.13.0"
+  },
+  "dependencies": {
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "rehype-parse": "^9.0.0",
+    "rehype-react": "^8.0.0",
+    "unified": "^11.0.4"
   }
 }
