--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,6 @@
   "parserOptions": { "project": ["./tsconfig.json"] },
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
-  "ignorePatterns": [
-    "**/*.md"
-  ],
-  "rules": {
-  }
+  "ignorePatterns": ["**/*.md", "vite.config.ts", "client", "dist", "node_modules"],
+  "rules": {}
 }
