--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,10 @@
 {
+  "extends": "./node_modules/kcd-scripts/shared-tsconfig.json",
   "compilerOptions": {
-    "jsx": "react",
-    "target": "es2019",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "lib": ["es2019", "dom"],
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
-    "alwaysStrict": true,
-    "removeComments": true,
-    "noImplicitReturns": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strictPropertyInitialization": false,
-    // "baseUrl": "./src",
-    // "rootDirs": ["./src"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  },
-  // "include": ["./**/*/*.ts"],
-  "exclude": ["./node_modules/*", "dist"]
+    "rootDir": "src",
+    "target": "ES2020",
+    "module": "ES2020",
+    "allowJs": true,
+    "checkJs": true
+  }
 }
